--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
       integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
+    />
+
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
     />
   </head>
   <body>
@@ -60,7 +61,7 @@
         </div>
       </section>
 
-      <section class="sec-info">
+      <section class="section-info">
         <div class="container">
           <h2 class="info-title">Info</h2>
           <ul class="list-info">
@@ -162,7 +163,7 @@
           <ul class="portfolio-list">
             <li>
               <img
-                class="porfolio-img"
+                class="porfolio-image"
                 src="./images/bankapp.jpg"
                 alt="Bankapp"
                 width="360"
@@ -176,7 +177,7 @@
 
             <li>
               <img
-                class="porfolio-img"
+                class="porfolio-image"
                 src="./images/cashless.jpg"
                 alt="Cashless"
                 width="360"
@@ -190,7 +191,7 @@
 
             <li>
               <img
-                class="porfolio-img"
+                class="porfolio-image"
                 src="./images/Meditation.jpg"
                 alt="Meditation"
                 width="360"
@@ -204,7 +205,7 @@
 
             <li>
               <img
-                class="porfolio-img"
+                class="porfolio-image"
                 src="./images/taxi.jpg"
                 alt="Taxi"
                 width="360"
@@ -218,7 +219,7 @@
 
             <li>
               <img
-                class="porfolio-img"
+                class="porfolio-image"
                 src="./images/screen.jpg"
                 alt="Screen"
                 width="360"
@@ -232,7 +233,7 @@
 
             <li>
               <img
-                class="porfolio-img"
+                class="porfolio-image"
                 src="./images/online.jpg"
                 alt="Online"
                 width="360"
