add markup thee

--- a/index.html
+++ b/index.html
@@ -65,28 +65,28 @@
         <div class="container">
           <h2 class="info-title">Info</h2>
           <ul class="list-info">
-            <li>
+            <li class="lis-list">
               <h3 class="list-title">Strategy</h3>
               <p class="list-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="lis-list">
               <h3 class="list-title">Punctuality</h3>
               <p class="list-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="lis-list">
               <h3 class="list-title">Diligence</h3>
               <p class="list-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="lis-list">
               <h3 class="list-title">Technologies</h3>
               <p class="list-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -161,7 +161,7 @@
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li>
+            <li class="por-list">
               <img
                 class="porfolio-image"
                 src="./images/bankapp.jpg"
@@ -175,7 +175,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="por-list">
               <img
                 class="porfolio-image"
                 src="./images/cashless.jpg"
@@ -189,7 +189,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="por-list">
               <img
                 class="porfolio-image"
                 src="./images/Meditation.jpg"
@@ -203,7 +203,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="por-list">
               <img
                 class="porfolio-image"
                 src="./images/taxi.jpg"
@@ -217,7 +217,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="por-list">
               <img
                 class="porfolio-image"
                 src="./images/screen.jpg"
@@ -231,7 +231,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="por-list">
               <img
                 class="porfolio-image"
                 src="./images/online.jpg"
